tests/integration/pilot/test_artifacts/pilot-f119641b99704107b0cfca0c6/TestTraffic/virtualservice/set_host_header_in_route_and_destination/tproxy/to_b/_test_context/VirtualService.3930633840.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-60257
spec:
  hosts:
  - b
  http:
  - headers:
      request:
        set:
          :authority: route-authority
    route:
    - destination:
        host: b
      headers:
        request:
          set:
            Host: dest-authority
